Fix - wrong background color on home page button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,6 @@ nav ul li a {
 }
 
 #home-button{
-    background-color: #35a5da;
     border: 1.5px solid #4a4a4a;
     font-size: 4vw;
 }
